refactor editbacking